cmake_minimum_required(VERSION 3.16.3 FATAL_ERROR)
project(sfml)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_SHARED_LIBRARY_PREFIX "")
add_library(sfml SHARED sfml.cpp sfml.h)
find_package(SFML REQUIRED system window graphics)

target_link_libraries(sfml PUBLIC sfml-graphics)
target_link_libraries(sfml PUBLIC sfml-system)
target_link_libraries(sfml PUBLIC sfml-window)